--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -145,8 +145,14 @@
 
     <string name="hello_world">Please enter your issues below</string>
     <string name="menu_settings">Settings</string>
+
     <string name="permission_content_provider_label">Read Secure CommCare Data</string>
     <string name="permission_content_provider_description">Allows this app to read data from CommCare while a user is logged in</string>
+    <string name="permission_external_action_label">Allow CommCare Actions</string>
+    <string name="permission_external_action_description">Allows this app to trigger operations like login, logout and sync in CommCare</string>
+    <string name="permission_commcare_logout_label">Allow Auto CommCare Logout</string>
+    <string name="permission_commcare_logout_description">Allows this app to logout a user from CommmCare App</string>
+
     <string name="title_activity_report_problem">ReportProblemActivity</string>
     <string name="title_activity_comm_care_verification">CommCareVerificationActivity</string>
     <string name="panes">one</string>
