--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -437,8 +437,7 @@
     <string name="root_detected_title" cc:translatable="true">Rooted Device Detected</string>
     <string name="root_detected_message" cc:translatable="true">You are not allowed to run CommCare on a rooted device. Please use a non rooted device</string>
     <string name="session_endpoint_unavailable" cc:translatable="true">No endpoint exist with id %1$s. Valid endpoints are %2$s</string>
-    <string name="session_endpoint_invalid_arguments" cc:translatable="true">Incorrect number of arguments supplied for endpoint %1$s. Supplied arguments: %2$s. Expected arguments: %3$s.</string>
-    <string name="session_endpoint_no_argument_with_name" cc:translatable="true">%1$s argument needs to be provided for endpoint %2$s</string>
+    <string name="session_endpoint_invalid_arguments" cc:translatable="true">Incorrect arguments supplied for endpoint %1$s. Supplied arguments: %2$s. Expected arguments: %3$s.</string>
     <string name="selected_location" cc:translatable="true">Selected Location</string>
     <string name="confirm_location" cc:translatable="true">Confirm location</string>
 </resources>
