More UI tweaks to audio capture

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -449,7 +449,8 @@ during.recording=Tap to stop recording...
 after.recording=Recording complete.
 pause.recording=Recording paused, tap to continue recording
 save=Save
-recording.record.again=Record Again
+recording.cancel=Cancel
+recording.clear=Clear
 recording.prompt.with.file.chooser=Record or choose sound below...
 recording.prompt.without.file.chooser=Record sound below...
 recording.custom=Recorded Sound
