UI tweaks: better delete icon, remove title, correct instructions

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -444,15 +444,17 @@ custom.restore.error=Error loading custom sync
 start.recording=Start Recording
 stop.recording=Stop Recording
 recording.header=Record a sound
-before.recording=Tap to start recording...
-during.recording=Tap to stop recording...
+before.recording=Tap to start recording
+before.overwrite.recording=Tap to start a new recording
+during.recording=Tap to stop recording
 after.recording=Recording complete.
+delete.recording=Tap to delete recording
 pause.recording=Recording paused, tap to continue recording
 save=Save
 recording.cancel=Cancel
 recording.clear=Clear
-recording.prompt.with.file.chooser=Record or choose sound below...
-recording.prompt.without.file.chooser=Record sound below...
+recording.prompt.with.file.chooser=Record or choose sound below
+recording.prompt.without.file.chooser=Record sound below
 recording.custom=Recorded Sound
 
 callout.failure.dialer=Device is not currently configured to make telephone calls
