--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -443,7 +443,7 @@
     <string name="playback_start_time">00:00</string>
     <string name="dependency_missing_dialog_title" cc:translatable="true">Get Required App</string>
     <string name="dependency_missing_dialog_title_plural" cc:translatable="true">Get Required Apps</string>
-    <string name="dependency_missing_dialog_message" cc:translatable="true">CommCare needs another application to be installed on your device before you can continue</string>
+    <string name="dependency_missing_dialog_message" cc:translatable="true">CommCare needs %s application to be installed on your device before you can continue</string>
     <string name="dependency_missing_dialog_message_plural" cc:translatable="true">CommCare needs below applications to be installed on your device before you can continue-</string>
     <string name="dependency_missing_dialog_go_to_store" cc:translatable="true">Install from Store</string>
     <string name="dependency_missing_dialog_playstore_not_found" cc:translatable="true">No Play Store found on your device</string>
