Improve Clear User Data title and message

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -867,8 +867,8 @@ settings.developer.title=Developer Options
 settings.main.title=CommCare > Settings
 settings.advanced.title=CommCare > Advanced
 clear.user.data=Clear User Data
-clear.user.data.warning.title=Warning!
-clear.user.data.warning.message=Are you sure you want to clear all mobile user data? Once you clear user data, all unsent and incomplete forms will be deleted and you won't be able to access them.
+clear.user.data.warning.title=WARNING!
+clear.user.data.warning.message=You are about to delete all unsent and incomplete forms. This is a PERMANENT action and you will NOT be able to recover these deleted forms. Make sure this is what you want to happen before continuing.
 force.log.submit=Force Log Submission
 recovery.mode=Recovery Mode
 
