--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -347,6 +347,9 @@
     <string name="title_data_change_logs_activity" cc:translatable="true">Data Change Logs</string>
     <string name="commcare_logs" cc:translatable="true">CommCare Data Change Logs</string>
 
+    <!--Clear User Data-->
+    <string name="clear_user_data_delete_form" cc:translatable="true">Delete Forms</string>
+
     <!--Incorrect Target Screen-->
     <string name="target_mismatch_lts_required" cc:translatable="true">App Requires CommCare LTS</string>
     <string name="target_mismatch_lts_required_install" cc:translatable="true">Install CommCare LTS</string>
