--- a/app/assets/locales/android_startup_strings.txt
+++ b/app/assets/locales/android_startup_strings.txt
@@ -17,6 +17,7 @@ install.perms.rationale.message=CommCare requires at least external storage read
 install.perms.denied.message=Crucial permissions denied ${0} times.\n\n If requesting permissions here fails, please enable permissions under Android's settings.
 install.choose.local.app=Available Apps
 install.wrong.code=The app code you have entered is incorrect. Please try scanning barcode or entering correct code.
+install.invalid.launch=Invalid CommCare launch, External applications should use a VIEW action to launch CommCare.
 
 menu.archive=Offline Install
 menu.sms=SMS Install
