--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -194,6 +194,36 @@ choice.or=OR
 connect.button.logged.in=Go to Connect menu
 connect.button.logged.out=Login to Connect ID
 
+connect.consent.title=Consent
+connect.consent.message=Do you give your consent for ConnectID?
+connect.consent.button=OK
+
+connect.phone.title=Primary Phone
+connect.phone.message=Please enter your primary phone number
+connect.phone.button=OK
+connect.phone.checking=Checking...
+connect.phone.available=Phone number is available!
+connect.phone.unavailable=Phone number is already in use
+connect.phone.invalid=Enter a valid phone number
+
+connect.password.title=Recovery Password
+connect.password.message=Please choose a recovery password
+connect.password.button=OK
+connect.password=Enter Password
+connect.password.repeat=Confirm Password
+connect.password.mismatch=Passwords must match
+connect.password.weak=Please choose a stronger password
+
+connect.password.verify.title=Recovery Password
+connect.password.verify.message=Please enter your recovery password to continue.
+connect.password.verify=Enter Password
+connect.password.verify.forgot=I forgot my password
+connect.password.verify.button=Submit
+
+connect.password.fail.title=Wrong Password
+connect.password.fail.message=You entered the wrong password, please try again.
+connect.password.fail.button=OK
+
 connect.recovery.title=ConnectID Account
 connect.recovery.decision.new=This is the first time logging into Connect on this device. Do you need to create a new account or recover an existing account?
 connect.recovery.button.new=Create New Account
@@ -202,11 +232,24 @@ connect.recovery.decision.phone=Please enter the primary phone number you regist
 connect.recovery.button.phone=Continue
 connect.recovery.button.extended=More Options
 
-connect.title=Connect ID Sign In
-connect.message=Please unlock using a configured biometric
-connect.button.fingerprint=Sign in with fingerprint
-connect.button.pin=Sign in with PIN
-connect.trouble.message=Trouble signing in?
+connect.recovery.alt.title=Alternate Phone
+connect.recovery.alt.message=On the next screen, we'll send a code via SMS to the alternate phone number associated with your account. Once verified, you can set a new password.
+connect.recovery.alt.button=Continue
+
+connect.recovery.success.title=Account Recovered
+connect.recovery.success.message=You have successfully recovered your account and can now resume using your ConnectID.
+connect.recovery.success.button=OK
+
+connect.unlock.title=ConnectID Sign In
+connect.unlock.message=Please sign in to continue
+connect.unlock.button.pin=Sign in with PIN
+connect.unlock.button.password=Sign in with Password
+connect.unlock.trouble.message=Trouble signing in?
+connect.unlock.fingerprint.title=Sign in via fingerprint
+connect.unlock.fingerprint.message=Use your fingerprint to continue
+connect.unlock.other.options=Other options
+connect.unlock.pin.title=Sign in via PIN
+connect.unlock.pin.message=Enter your PIN to continue
 
 connect.register.title=Create Account
 connect.register.id=User ID
@@ -216,16 +259,22 @@ connect.register.phone=Phone Number (+18887776666)
 connect.register.phone.alt=Alternate Phone Number
 connect.register.create=Create Account
 
+connect.register.success.title=Account Created
+connect.register.success.message=Your ConnectID account has been successfully created and is now ready for you to use!
+connect.register.success.button=OK
+
 connect.verify.title=Login Options
 connect.verify.message=Please configure at least one local verification method. Check means configured, eye means not configured, X means unavailable.
 connect.verify.fingerprint=Fingerprint
 connect.verify.pin=PIN
-connect.verify.button=Continue
+connect.verify.button.configured=Continue
+connect.verify.button.password=Use Password Only
 
 connect.verify.phone.title=Verify Phone
-connect.verify.phone.label=Please enter the code sent via SMS to your primary phone.
-connect.verify.phone.label.alternate=Almost there! Please enter the code sent via SMS to your alternate phone.
+connect.verify.phone.label=Please enter the code sent via SMS to your primary phone${0}.
+connect.verify.phone.label.alternate=Almost there! Please enter the code sent via SMS to your alternate phone${0}.
 connect.verify.phone.resend=Resend code
+connect.verify.phone.change=Change phone number
 connect.verify.phone.verify=Verify code
 
 connect.pictures.title=Account Recovery
@@ -385,7 +434,7 @@ bulk.form.dump.success=${1} forms dumped successfully
 login.menu.demo=Enter Practice Mode
 login.menu.password.mode=Forgot PIN?
 login.menu.app.manager=Go To App Manager
-login.menu.connect.signin=Sign in to ConnectID
+login.menu.connect.signin=Sign up for ConnectID
 login.menu.connect.signout=Sign out of ConnectID
 login.menu.connect.forget=Forget ConnectID user
 
