Fixed bug where password sometimes wouldn't auto-fill when it should. Not allowing password option when prompting for biometric unlock during registration. Fixed bug where ConnectID button on login page would appear after logging out of an app even if ConnectID user was not configured. Disabled auto-login to app after unlocking ConnectID.

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -183,7 +183,7 @@ login.sync=Synchronize with server
 login.bad.password=We couldn't find a user with this password. Please try another!
 login.welcome.single=Welcome back! Please log in.
 login.welcome.multiple=Welcome back! Please select an app and log in.
-login.welcome.connect.signedout=Log into ConncetID first and then enter your app.
+login.welcome.connect.signedout=Log into ConnectID first and then enter your app.
 login.welcome.connect.signedin=Welcome ${0}!
 login.show.password=SHOW
 login.hide.password=HIDE
